[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Menu/ChangeScene.gd" type="Script" id=1]
[ext_resource path="res://Art/Objects/portal.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 26 )

[node name="ChangeScene" type="Area2D"]
collision_layer = 64
collision_mask = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ChangingScene" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.57991, 1.27581 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ChangingScene" to="." method="_on_ChangingScene_timeout"]
